Создал модуль "сортировки" для общего приложения, работающий по шаблонном классе